--- a/style.css
+++ b/style.css
@@ -1,20 +1,20 @@
 * {
     font-family: Roboto, sans-serif;
     box-sizing: border-box;
-    text-align: justify;
+    text-align: left;
     color:#464a75;
     margin: 0; 
     padding: 0;
 }   
 
-/* hier komen alle Headings */
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 h1, h2, h3, li {
     font-family: 'EB Garamond', serif;
     color:#464a75;
     text-align: center;
 }
 
-/* hier komen alle semiotics*/
 body {
     background-image: url('img/icoontjes/achtergrond3.png');
     background-size: 70vw;
@@ -80,6 +80,8 @@ footer {
     text-align: left;
     width: 35em; /* Breedte van de cirkel */
     height: 35em; /* Hoogte van de cirkel */
+    min-width: 10em;
+    min-height: 10em;
     background-color: rgba(220, 222, 245, 0.97);
     border-radius: 50%;
     line-height: 20px;
@@ -91,7 +93,7 @@ footer {
     margin-bottom: 1em;
 }
 
-.winkel-grid {
+.achtergrond {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -113,6 +115,7 @@ footer {
     display: flex;
     justify-content: center; /* Horizontaal centreren */
     flex-wrap: wrap;
+
 }
 
 .project {
@@ -128,28 +131,23 @@ footer {
 .winkel {
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     flex-direction: column;
     background-color: #cccdff;
     height: 100vh;
     width: 20vw;
     height: 50vh;
-    padding: 5%;
+    padding: 2%;
     margin: 2%;
 }
 
 /*click ding voor de winkel*/
 fieldset {
     background-color: #F5F5F5;
+    width: 70%;
     border: 0px;
     margin: 5%;
-    padding: 5%
-}
-
-legend {
-    font-family:'EB Garamond', serif;
-    font-weight: bold;
-    text-align: center;
-    font-size: 2em;
+    padding: 2%
 }
 
 /* navigatie */
@@ -193,15 +191,14 @@ a:focus{
 }
 /* einde nav */
 
-
 img {
-    max-width: 100%;
+    max-width: 70vw;
+    max-height: 70vh;  /* Anders klopt Eye-candy afbeeldingen niet */
 }
 
-.cover-img {
-    width: 50%;
-} 
-
+.container:first-child{
+    max-width: 30vw;
+}
 /*portfolio link hover*/
 .a-portfolio {
     padding: 0px;
@@ -210,10 +207,20 @@ img {
 
 .project img {
     transition: transform 0.3s, opacity 0.3s;
+    padding: 0px;
+    transition: all 500ms ease;
+    max-width: 100%;
+    max-height: 50%;
 }
 
 .project img:hover {
     transform: scale(1.01) translate(0, -30px);
     background-color: #464a75;
     opacity: 0.9;
+}
+
+@media (max-width: 768px) {
+    body {
+        font-size: 16px;
+    }
 }
