--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 * {
     font-family: Roboto, sans-serif;
     box-sizing: border-box;
@@ -6,19 +8,6 @@
     margin: 0; 
     padding: 0;
 }   
-
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-@media (max-width: 768px) {
-    body {
-        font-size: 16px;
-    }
-}
-
-h1, h2, h3, li {
-    font-family: 'EB Garamond', serif;
-    color:#464a75;
-    text-align: center;
-}
 
 body {
     background-image: url('img/icoontjes/achtergrond3.png');
@@ -40,7 +29,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
+    flex-flow: wrap;
     margin: 2em;
 }
 
@@ -51,30 +40,15 @@ footer {
     border-top: 1px solid #464a75;
 }
 
-#home {
-    height: 100vh;
-    width: 100%;
+h1, h2, h3, li {
+    font-family: 'EB Garamond', serif;
+    color:#464a75;
+    text-align: center;
 }
 
-@keyframes slide {
-    0% {
-      top: 50%;
-    }
-    50% {
-      top: 100px;
-    }
-    100% {
-      top: 50%;
-    }
-  }
-
-#home .circle{
-    bottom:100%;
-    animation-name: slide;
-    animation-duration: 5s;
-    animation-timing-function: ease-in-out;
-    animation-delay: .5s;
-    animation-iteration-count: infinite;
+.home {
+    height: 100vh;
+    width: 100%;
 }
 
 .circle {
@@ -98,6 +72,27 @@ footer {
     margin-bottom: 1em;
 }
 
+@keyframes slide {
+    0% {
+      top: 50%;
+    }
+    50% {
+      top: 100px;
+    }
+    100% {
+      top: 50%;
+    }
+  }
+
+.home .circle{
+    bottom:100%;
+    animation-name: slide;
+    animation-duration: 5s;
+    animation-timing-function: ease-in-out;
+    animation-delay: .5s;
+    animation-iteration-count: infinite;
+}
+
 .achtergrond {
     display: flex;
     flex-wrap: wrap;
@@ -112,7 +107,7 @@ footer {
 .tekst-container {
     max-width: 40vw;
     min-width: 20vw;
-    margin: 0 auto; /* Centreer de container horizontaal in de viewport */
+    /* margin: 0 auto; Centreer de container horizontaal in de viewport */
     padding: 3%;
 }
 
@@ -196,8 +191,8 @@ a:focus{
 /* einde nav */
 
 img {
-    max-width: 50vw;
-    max-height: 50vh;  /* Anders klopt Eye-candy afbeeldingen niet */
+    max-width: 40vw;
+    max-height: 40vw;  /* Anders klopt Eye-candy afbeeldingen niet */
     min-height: 0.1vh;
     min-width: 0.1vw;
     margin: 0.1em;
@@ -205,6 +200,8 @@ img {
 
 .winkel img {
     margin: 4em;
+    max-height: 50vw;
+    max-width: 50vw;
 }
 
 .button{
