--- a/style.css
+++ b/style.css
@@ -160,6 +160,10 @@ fieldset {
     animation-iteration-count: infinite;
 }
 
+.langere-pagina {
+    height: 100vh;
+}
+
 .achtergrond {
     display: flex;
     flex-wrap: wrap;
@@ -219,9 +223,9 @@ fieldset {
     border: none;
     border-radius: 0.5em;
     padding: 1em;
-    padding: 15px 32px;
-    font-size: 16px;
-    margin: 4px 2px;
+    padding: 1em 2em;
+    font-size: 1em;
+    margin: 0.4em 0.2em;
     cursor: pointer;
     transition: all .1s linear;
 }
@@ -308,15 +312,17 @@ fieldset {
         flex-direction: column;
         background-color: #cccdff;
         height: auto;
-        width: 80vw;
+        width: 30vw;
         padding: 3%;
         margin: 2%;
     }
 
     .winkel img {
         max-height: 20vh;
-        max-width: 80vw;
+        max-width: 6em;
     }
+
+
 
     .tekst-container {
         max-width: 60vw;
@@ -327,4 +333,29 @@ fieldset {
     label {
         font-size: 0.8em;
     }
+
+    .button{
+        background-color: #F5F5F5;
+        color: #464a75;
+        text-decoration: none;
+        box-shadow: 0 5px 0 #414682;
+        border: none;
+        border-radius: 0.5em;
+        padding: 0.8em;
+        padding: 0.8em 1.8em;
+        font-size: 0.8em;
+        margin: 0.4em 0.2em;
+        cursor: pointer;
+        transition: all .1s linear;
+    }
+
+    fieldset {
+        width: 95%;
+    }
+
+    .project {
+        width: 41.4688vw;
+        height: auto;
+    }
+    
 }
